--- a/package.json
+++ b/package.json
@@ -40,43 +40,44 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tanstack/react-query": "^5.83.0",
-    "@trpc/client": "^11.4.3",
-    "@trpc/next": "^11.4.3",
-    "@trpc/react-query": "^11.4.3",
-    "@trpc/server": "^11.4.3",
-    "@trpc/tanstack-react-query": "^11.4.3",
+    "@tanstack/react-query": "^5.84.1",
+    "@trpc/client": "^11.4.4",
+    "@trpc/next": "^11.4.4",
+    "@trpc/react-query": "^11.4.4",
+    "@trpc/server": "^11.4.4",
+    "@trpc/tanstack-react-query": "^11.4.4",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.533.0",
-    "next": "15.4.4",
+    "lucide-react": "^0.536.0",
+    "next": "15.4.6",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "19.1.1",
     "react-day-picker": "^9.8.1",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.61.1",
-    "react-resizable-panels": "^3.0.3",
-    "recharts": "^2.15.4",
+    "react-dom": "19.1.1",
+    "react-hook-form": "^7.62.0",
+    "react-resizable-panels": "^3.0.4",
+    "recharts": "^3.1.2",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.6",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.0.13"
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "15.4.6",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
